--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/glm"]
-	path = vendor/glm
-	url = https://github.com/g-truc/glm
+[submodule "vendor/UtilsLibrary"]
+	path = vendor/UtilsLibrary
+	url = https://github.com/matiasjpedro/UtilsLibrary
